Second commit (getAvailableRooms)